# monitoring-ui

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: CI.yml
backend/: Dockerfile  container_status.py  log.py  main.py  pyproject.toml  requirements_dev.txt  utils.py
backend/config/: .env
backend/db/: config.py  model.py  repository.py  sql_alchemy.py
backend/routers/: grafana.py  temp.py
backend/tests/: conftest.py
backend/tests/e2e/: test_async_connection.py  test_connection.py
backend/tests/integration/: test_repository.py  test_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  routers.ts
frontend/src/components/: Event.vue  Issue.vue
frontend/src/components/ui/: Footer.vue  Header.vue
frontend/src/store/: server.ts
frontend/src/tests/: basic.test.ts
frontend/src/types/: store.ts
frontend/src/views/: EventDetail.vue  List.vue
metrics/: Makefile  data.py  log.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini  utils.py
metrics/db/: config.py  model.py  orm.py  repository.py  sql_alchemy.py
metrics/tests/: conftest.py  test_container_status.py
metrics/tests/integration/: test_db.py  test_repository.py  test_utils.py
nginx/: Dockerfile  local.crt  local.key  nginx.conf
prometheus/: prometheus.yml
